<resources>
    <string name="app_name">Cash Crowd</string>

    <string name="server_error">Server error</string>
    <string name="malformed_json">Malformed server response</string>
    <string name="unable_to_communicate_to_server">Unable to communicate to server</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in">Sign In</string>
    <string name="error_auth">Error during authorization</string>


    <string name="arrow_down">M7.41,7.84L12,12.42l4.59,-4.58L18,9.25l-6,6 -6,-6z</string>
    <string name="arrow_up">M7.41,15.41L12,10.83l4.59,4.58L18,14l-6,-6 -6,6z</string>
    <string name="events_screen_title">Events</string>
    <string name="create_event_btn_text">Yes, let\'s go!</string>
    <string name="join_event_btn_text">No, I just got invited</string>
    <string name="create_event_title">Lets create new event?</string>
    <string name="hint_event_title">Event title</string>
    <string name="hint_event_description">Event description</string>
    <string name="create_event_screen_title">Create event</string>
    <string name="add_guest">Add guest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_event_not_found">Event not found</string>
    <string name="participant">Participant</string>
    <string name="action_info_income">%s invested %s</string>
    <string name="action_info_spent">%s spent %s</string>
    <string name="success_event_create">Event successfully created</string>
    <string name="error_event_create">Error creating event</string>
    <string name="add_action_title">What\'s you up to?</string>
    <string name="add_action_income_btn">I brought cash</string>
    <string name="add_action_withdraw_btn">I want to take some</string>
    <string name="add_action_income_title">Put in money</string>
    <string name="hit_how_much_money">How much?</string>
    <string name="add_action_withdraw_title">Take money</string>

    <string name="add_action_withdraw_accept">Take</string>
    <string name="add_action_income_accept">Put</string>
    <string name="error_create_action">Error creating action</string>
    <string name="success_create_action">You successfully created action</string>
    <string name="event_share_string">Here is event invite code: %s. Or you can simply click this link %s</string>
    <string name="enter_invite_code">Enter event invite code</string>
    <string name="hint_invite_code">Invite code</string>
    <string name="enter">Enter</string>
    <string name="error_accept_invite">Error accepting invite</string>
    <string name="success_accept_invite">Hooray, you accepted invite!</string>
    <string name="error_auth_required">You are not authenticated in the application</string>
    <string name="error_handle_deep_link">Error handling deep link</string>
    <string name="log_out">Log out</string>
    <string name="dialog_logout_title">Log out?</string>
    <string name="dialog_logout_body">Are you sure that you want to log out?</string>
    <string name="event_page_actions">Actions</string>
    <string name="event_page_participants">Participants</string>
    <string name="event_page_accounting">Accounting</string>
    <string name="cancel">Cancel</string>
    <string name="error_fetching_event_accounting">Error fetching event accounting</string>
    <string name="error_fetching_event_actions">Error fetching event actions</string>
    <string name="error_fetching_event_participants">Error fetching event participants</string>
    <string name="total_amount">Total amount</string>
    <string name="total_turnover">Total turnover</string>
    <string name="participants">Participants</string>
    <string name="actions">Actions</string>
    <string name="user_balance">Balance: %s</string>
    <string name="no_description">Owner didn\'t provide description</string>
    <string name="event_description">Event decription</string>
    <string name="ok">OK</string>
</resources>
