<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="code"
            type="android.arch.lifecycle.MutableLiveData&lt;String>" />

        <variable
            name="onCancel"
            type="Runnable" />

        <variable
            name="onAccept"
            type="Runnable" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/enter_invite_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_invite_code"
                android:inputType="text"
                android:text="@={code}" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="@{onCancel}"/>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{onAccept}"
                android:text="@string/enter" />

        </LinearLayout>
    </LinearLayout>
</layout>