<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ekalips.cahscrowd.stuff.utils.EventUtils" />

        <variable
            name="vm"
            type="com.ekalips.cahscrowd.event.mvvm.vm.child.EventAccountingViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <TextView
                    android:id="@+id/totalAmountTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_amount"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@+id/totalAmountCountTv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/centerGuideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/totalAmountCountTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@{EventUtils.formatCurrency(vm.state.statistic.totalAmount)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="@+id/verticalGuideline"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/centerGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/totalAmountTv"
                    tools:text="1400 $" />

                <View
                    android:id="@+id/centerGuideline"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:background="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/totalTurnoverTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_turnover"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@+id/totalTurnoverAmountTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/centerGuideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/totalTurnoverAmountTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@{EventUtils.formatCurrency(vm.state.statistic.totalTurnover)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="@+id/verticalGuideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/centerGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/totalTurnoverTv"
                    tools:text="3200 $" />

                <View
                    android:id="@+id/verticalGuideline"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/participantsTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/participants"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@+id/participantsCountTv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/centerGuideline2"
                    app:layout_constraintTop_toTopOf="@+id/verticalGuideline"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/participantsCountTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@{String.valueOf(vm.state.statistic.participants)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/centerGuideline2"
                    app:layout_constraintTop_toBottomOf="@+id/participantsTv"
                    tools:text="50" />

                <View
                    android:id="@+id/centerGuideline2"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:background="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/actionsTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/actions"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toTopOf="@+id/actionsCountTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/centerGuideline2"
                    app:layout_constraintTop_toTopOf="@+id/verticalGuideline"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/actionsCountTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@{String.valueOf(vm.state.statistic.actionsCount)}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/centerGuideline2"
                    app:layout_constraintTop_toBottomOf="@+id/actionsTv"
                    tools:text="200" />


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</layout>