<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.ekalips.cahscrowd.create_event.mvvm.vm.CreateEventScreenViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ekalips.cahscrowd.create_event.mvvm.view.CreateEventActivity">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/backBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> vm.goBack()}"
                        android:src="@drawable/ic_arrow_back"
                        app:backgroundTint="@color/white"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/create_event_title"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/backBtn"
                        app:layout_constraintRight_toLeftOf="@+id/menuBtn"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Event Name" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/menuBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_more_vert"
                        android:visibility="invisible"
                        app:backgroundTint="@color/white"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="36dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:id="@+id/eventInfoHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_event_title">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"
                                android:maxLines="1"
                                android:text="@={vm.state.eventTitle}" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/descTvLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_event_description">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"
                                android:text="@={vm.state.eventDescription}" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="24dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorAccent"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?selectableItemBackground"
                            android:gravity="center"
                            android:onClick="@{() -> vm.onAddGuestClicked()}"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_person_add"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="16dp"
                                android:text="@string/add_guest"
                                android:textAllCaps="false"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/guestsRv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:visibility="@{vm.state.guests.size != 0}"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                            tools:listitem="@layout/rv_item_guest" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:onClick="@{() -> vm.createEvent()}"
            android:src="@drawable/ic_done"
            android:tint="@color/white"
            app:fabSize="normal" />

    </android.support.design.widget.CoordinatorLayout>
</layout>